# investintell-datalake-workers

./: .gitattributes  .gitignore  .railwayignore  README.md  compose.quant-engine.yml  qc_a3_core.py  railway.livefeed.toml  railway.toml  requirements.quant-engine.in  requirements.txt
.githooks/: pre-push
configs/: a31_a32_selected_v01.yaml  a31_local_v01.yaml  a31_screen_v01.yaml  a31_targeted_v02.yaml  a31_targeted_v02_local.yaml  a31_v02_g2_limited.yaml  a31_v02a_g1.yaml  a31_v02b_sloos_g1.yaml  a31_v03_revision_robust_g1.yaml  a4_identity_calibration_v01.yaml
docs/: INGESTION_DESIGN.md
harness/: __init__.py
notebooks/: qc_a3_parity.ipynb  qc_hmm_challenger.ipynb
qc-a3-parity/: README.md  config.json  main.py  mia.ipynb  microgrid_worker.py  object_store_manifest_key.txt  qc_a3_core.py  qc_a3_parity.ipynb  qc_hmm_challenger.ipynb
schemas/: benchmark_ingest.sql  characteristics.sql  credit_regime.sql  factor_model.sql  form345_ingestion.sql  fund_factors.sql  fund_institutional_reveal.sql  instrument_ingestion.sql  macro_ingestion.sql  macro_observation_vintage.sql  nport_cusip_enrichment.sql  nport_fund_flows.sql  nport_lookthrough.sql  (+8 more)
services/quant_engine/: pyproject.toml
services/quant_engine/src/investintell_quant_engine/: __init__.py  _paths.py  bundle_io.py  cli.py  comparator.py  contract_bundle.py  environment.py  manifests.py  outputs_manifest.py  preflight.py  repeatability.py
services/quant_engine/src/investintell_quant_engine/runners/: __init__.py  a31_grid.py  a32_grid.py  input_pack.py  market_grid.py  parity.py  scope_decision.py
(+431 files in other folders)
